--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
   </script>
 
   <body>
-    <div class="col-xs-x" style="text-align: center;display: grid;">
+    <div class="container-md" style="text-align: center;display: grid;">
       <h1 class="jumbotron"><%= title %></h1>
 
       <div class="buttonGroup">
@@ -99,7 +99,10 @@
         </button>
       </div>
 
-      <table class="table table-dark table-striped" style="text-align: center;">
+      <table
+        class="table table-dark table-striped"
+        style="text-align: center; table-layout: fixed;"
+      >
         <tr>
           <th>제목</th>
           <th>내용</th>
@@ -118,9 +121,21 @@
 
         <tr class="trClick">
           <td class="_id" style="display: none;"><%= l._id%></td>
-          <td><%= l.title %></td>
-          <td><%= l.content %></td>
-          <td><%= l.insertDate %></td>
+          <td
+            style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
+          >
+            <%= l.title %>
+          </td>
+          <td
+            style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
+          >
+            <%= l.content %>
+          </td>
+          <td
+            style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
+          >
+            <%= l.insertDate %>
+          </td>
           <td onclick="event.cancelBubble=true">
             <% if(l.complete == "ok"){ %>
 
@@ -142,7 +157,11 @@
 
             <% } %>
           </td>
-          <td><%= l.cDate %></td>
+          <td
+            style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;"
+          >
+            <%= l.cDate %>
+          </td>
         </tr>
 
         <% }) %>
